# MPA-MOK

./: .gitignore  README.md
PyRBinLWE/: CMakeLists.txt
PyRBinLWE/VS_Studio_project/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Application.vcxproj  Application.vcxproj.filters  CMakeCache.txt  PyRBinLWE.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  generate_vs2022.bat  mpamok.vcxproj  mpamok.vcxproj.filters  pybind11module.vcxproj  pybind11module.vcxproj.filters
PyRBinLWE/VS_Studio_project/Application.dir/Debug/: Application.exe.recipe  Application.ilk
PyRBinLWE/VS_Studio_project/Application.dir/Debug/Application.tlog/: Application.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PyRBinLWE/VS_Studio_project/Debug/: mpamok.cp310-win_amd64.pyd  mpamok.exp  mpamok.lib  pybind11module.cp310-win_amd64.pyd  pybind11module.exp  pybind11module.lib
PyRBinLWE/VS_Studio_project/mpamok.dir/Debug/: mpamok.cp310-win_amd64.pyd.recipe
PyRBinLWE/VS_Studio_project/pybind11module.dir/Debug/: pybind11module.cp310-win_amd64.ilk  pybind11module.cp310-win_amd64.pyd.recipe
PyRBinLWE/lib/: mpamok.cp310-win_amd64.pyd  mpamok.cp311-win_amd64.pyd  mpamok.exp  mpamok.lib
PyRBinLWE/source/: CMakeLists.txt
PyRBinLWE/source/app/: application.py  main.cpp  test.cpp
PyRBinLWE/source/module/: Encryptor.cpp  Encryptor.h  Polynomial.cpp  Polynomial.h  module.cpp
(+23 files in other folders)
